welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:42: error: not found: value gauchee
gauchee()
^PictureMono2:57: error: not found: value gauchee
gauchee()
^